<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>nundrum.net</groupId>
<artifactId>AWTForeignXWindow</artifactId>
<packaging>jar</packaging>
<version>1.0-SNAPSHOT</version>
<name>AWTForeignXWindow</name>
<url>http://maven.apache.org</url>
<properties>
	<project.build.SourceEncoding>UTF-8</project.build.SourceEncoding>
	<maven.compiler.source>1.9</maven.compiler.source>
	<maven.compiler.target>1.9</maven.compiler.target>
</properties>

<build>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.10.1</version>
			<configuration>
				<compilerArgs>
					<arg>--add-exports</arg><arg>java.desktop/sun.awt=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.awt.event=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.awt.image=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.awt.peer=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.awt.shell=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.awt.X11=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.java2d=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.java2d.pipe=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/sun.util.logging=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/java.awt.peer=ALL-UNNAMED </arg>
					<arg>--add-exports</arg><arg>java.desktop/java.awt.dnd.peer=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.awt=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.awt.event=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.awt.image=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.awt.peer=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.awt.shell=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.awt.X11=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.java2d=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.java2d.pipe=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/sun.util.logging=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/java.awt.peer=ALL-UNNAMED </arg>
					<arg>--add-opens</arg><arg>java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
				</compilerArgs>
			</configuration>
		</plugin>
	</plugins>
</build>
<dependencies>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>3.8.1</version>
		<scope>test</scope>
	</dependency>
</dependencies>
		</project>
